Merge v2 from dev into main (#165)